--- a/src/components/ui/PremiumSlider.css
+++ b/src/components/ui/PremiumSlider.css
@@ -1,6 +1,7 @@
 /* From Uiverse.io by satisshTechie */
 .PB-range-slider {
   -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   height: 4px;
   border-radius: 5px;
@@ -9,6 +10,7 @@
   opacity: 0.7;
   -webkit-transition: .2s;
   transition: opacity .2s;
+  touch-action: none;
 }
 
 .PB-range-slider::-webkit-slider-thumb {
